2013-03-12  Mark Wielaard  <mjw@redhat.com>

	* dwfl_getsrclines.c (dwfl_getsrclines): Return 0 on success.

2013-02-22  Mark Wielaard  <mjw@redhat.com>

	* open.c (__libdw_gunzip,__libdw_bunzip2,__libdw_unlzma): Define
	as DWFL_E_BADELF when not used.

2013-02-10  Mark Wielaard  <mjw@redhat.com>

	* argp-std.c (parse_opt): Use opt->core and opt->e explicitly in
	failure messages When handling ARGP_KEY_SUCCESS because arg will
	not have been set.

2013-01-30  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* linux-proc-maps.c: Include system.h.
	(PROCEXEFMT, get_pid_class): New.
	(grovel_auxv): Detect 32-bit vs. 64-bit auxv, possibly call
	get_pid_class.

2013-01-23  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getdwarf.c (find_aux_sym): Don't substract one
	from aux_syments by default.
	(find_symtab): Also succeed when only aux_symdata is found.
	When no symtab is found always try to load auxiliary table.
	(dwfl_module_getsymtab): Substract one from result when both
	tables have symbols.
	* dwfl_module_getsym.c (dwfl_module_getsym): Only skip auxiliary
	zero entry when both tables have symbols.
	* dwfl_module_addrsym.c (dwfl_module_addrsym): Only substract
	one from first_global when both tables have symbols.

2013-01-16  Mark Wielaard  <mjw@redhat.com>

	* libdwflP.h (struct Dwfl_Module): Add aux_sym, aux_symdata,
	aux_syments, aux_symstrdata, aux_symxndxdata and aux_first_global.
	(dwfl_adjusted_aux_sym_addr): New function.
	(dwfl_deadjust_aux_sym_addr): Likewise.
	(dwfl_adjusted_st_value): Take and check symfile argument.
	(dwfl_deadjust_st_value): Likewise.
	* dwfl_module_getdwarf.c (find_prelink_address_sync): Take and
	use dwfl_file as argument to set address_sync.
	(find_debuginfo): Call find_prelink_address_sync with debug file.
	(find_aux_sym): New function.
	(find_symtab): Use find_aux_sym if all we have is the dynsym table
	and fill in aux DwflModule fields.
	(dwfl_module_getsymtab): Return syments plus aux_syments.